# omniprompt

./: Cargo.toml
src/: main.rs
