[package]
name = "omniprompt"
version = "0.1.2"
authors = ["Steven Pease <peasteven@gmail.com>"]
description = "A very customized prompt"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
sysinfo = { package = "sysinfo", version = "0.23.10", default-features = false, optional = true }

[target.'cfg(not(unix))'.dependencies]
sysinfo = { package = "sysinfo", version = "0.23.10", default-features = false }

[dependencies]
termcolor = { version = "1.1.3", default-features = false }
nix = { version = "0.24.0", default-features = false, features = [ "feature" ], optional = true }
whoami = { version = "1.2.1", default-features = false }
chrono = { version = "0.4.19", default-features = false, features = [ "clock" ] }
dirs = { version = "4.0.0", default-features = false }
git2 = { version = "0.14.2", default-features = false, features = [ "vendored-libgit2" ], optional = true }
os_info = { version = "3.2.0", default-features = false, optional = true }
bytesize = { version = "1.1.0", default-features = false, optional = true }
anyhow = { version = "1.0.57", default-features = false, features = [ "std" ] }

[features]
default = ["git","platform"]
git = ["git2"]
network = ["bytesize", "sysinfo"]
platform = ["nix", "os_info"]
tty = ["nix" ]

[profile.release]
codegen-units = 16
debug = 0
debug-assertions = false
incremental = false
lto = true
overflow-checks = false
opt-level = 3
panic = 'abort'
rpath = false
strip = true
