[package]
name = "omniprompt"
version = "0.1.2"
authors = ["Steven Pease <peasteven@gmail.com>"]
description = "A very customized prompt"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
sysinfo = { package = "sysinfo", version = "0.30.13", default-features = false, optional = true }

[target.'cfg(not(unix))'.dependencies]
sysinfo = { package = "sysinfo", version = "0.30.13", default-features = false }

[dependencies]
nix = { version = "0.29.0", default-features = false, features = [ "feature" ], optional = true }
whoami = { version = "1.5.1", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = [ "clock" ] }
dirs = { version = "5.0.1", default-features = false }
git2 = { version = "0.19.0", default-features = false, features = [ "vendored-libgit2" ], optional = true }
bytesize = { version = "1.3.0", default-features = false, optional = true }
anyhow = { version = "1.0.86", default-features = false, features = [ "std" ] }
supports-color = { version = "3.0.0", default-features = false }

[features]
default = ["git","platform"]
git = ["git2"]
network = ["bytesize", "sysinfo"]
platform = ["nix", "sysinfo"]
tty = ["nix?/term"]

[profile.release]
codegen-units = 16
debug = 0
debug-assertions = false
incremental = false
lto = true
overflow-checks = false
opt-level = 3
panic = 'abort'
rpath = false
strip = true
