[package]
name = "omniprompt"
version = "0.1.2"
authors = ["Steven Pease <peasteven@gmail.com>"]
description = "A very customized prompt"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
sysinfo = { package = "sysinfo", version = "0.31.2", default-features = false, features = [ "system" ], optional = true }

[target.'cfg(not(unix))'.dependencies]
sysinfo = { package = "sysinfo", version = "0.31.2", default-features = false, features = [ "system" ] }

[dependencies]
nix = { version = "0.29.0", default-features = false, features = [ "feature" ], optional = true }
whoami = { version = "1.5.1", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = [ "clock" ] }
dirs = { version = "5.0.1", default-features = false }
bytesize = { version = "1.3.0", default-features = false, optional = true }
anyhow = { version = "1.0.86", default-features = false, features = [ "std" ] }
supports-color = { version = "3.0.0", default-features = false }
gix = { version = "0.64.0", default-features = false, optional = true }

[features]
default = ["git","network", "platform"]
git = ["gix"]
network = ["bytesize", "sysinfo/network"]
platform = ["nix", "sysinfo"]
tty = ["nix?/term"]

[profile.release]
codegen-units = 16
debug = 0
debug-assertions = false
incremental = false
lto = true
overflow-checks = false
opt-level = 3
panic = 'abort'
rpath = false
strip = true
